# self-organized-uav

./: CMakeLists.txt  README.md  main.c  plot_data.py  run.sh  run_benchmark.sh
benchmark/: benchmark_predefined_targets.c  benchmark_predefined_targets_VESPA.csv  benchmark_random_targets.c  benchmark_random_targets_VESPA.csv  parameters.txt  plot_benchmark_predefined_targets.py  plot_benchmark_random_targets.py
benchmark/SAS/: benchmark_8_targets_sas.csv  benchmark_predefined_targets_SAS.csv  drone.py  experiments.py  exspanbal.py  landscape.py  num_drones_targets.csv  num_irr_drones_targets.csv  random_targets.txt
include/: balancing.h  expansion.h  spanning.h
src/: balancing.c  expansion.c  expansuionc.c  spanning.c
